--- a/app/(client)/components/Header.css
+++ b/app/(client)/components/Header.css
@@ -1,94 +1,152 @@
-/* Menu desplegable */
-
-.seccionesHeader a:hover, .seccionesHeader p:hover{
-    background-color: #333333b4;
-    border-radius: 30px;
+header {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  background-color: #7b22b3;
+  box-shadow: 0px 2px 20px #333333;
 }
 
-.menuHorizontal li:hover .menuVertical {
-    display: block;
+.logoHeader img {
+  padding: 10px 0;
+}
+
+.contenidoHeader {
+  display: flex;
+  width: 100%;
+  height: 67px;
+  justify-content: space-evenly;
+}
+
+.seccionesHeader {
+  display: flex;
+}
+
+.menuHorizontal {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  align-items: center;
+  padding-left: 0;
+}
+
+.menuHorizontal li {
+  align-items: center;
+  display: flex;
+  align-items: center;
+}
+
+.menuHorizontal a,
+.menuHorizontal p {
+  text-decoration: none;
+  display: block;
+  color: white;
+  font-size: 12;
+  font-weight: bold;
+  padding: 15px;
+  height: 100%;
+  width: 100%;
+  margin: 0;
+}
+.seccionesHeader a,
+.seccionesHeader p {
+  transition: background-color 0.3s ease;
+}
+.seccionesHeader a:hover,
+.seccionesHeader p:hover {
+  background-color: #333333b4;
 }
 
 .menuVertical {
-    display: none;
-    flex-direction: column;
-    position: absolute;
-    width: 200px;
-    z-index: 1000;
-    background-color: #7B22B3;
-    top: 50px;
-    list-style: none;
-    
+  display: none;
+  flex-direction: column;
+  position: absolute;
+  width: 200px;
+  z-index: 1000;
+  background-color: #7b22b3;
+  top: 50px;
+  list-style: none;
+  padding: 0;
 }
 
-.menuHorizontal a, .menuHorizontal p{
-    text-decoration: none;
-    display: block;
-    color: white;
-    font-size: 12;
-    font-weight: bold;
-    padding: 15px;
-    height: 100%;
-    width: 100%;
-    margin: 0;
-
+.menuHorizontal li:hover .menuVertical {
+  display: block;
 }
 
-/* Responsivo */
+/* RESPONSIVE */
+
+#menucheckbox {
+  display: none;
+}
+
 .menuIcono {
-    width: 25px;
+  width: 25px;
 }
+
+.seccionesHeader label {
+  display: none;
+  cursor: pointer;
+}
+
+/*--- RESPONSIVE ---*/
 
 @media screen and (max-width: 700px) {
-    .menuHorizontal {
-        display: none;
-        flex-direction: column;
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        visibility: hidden;
-        opacity: 0;
-        transform: translateY(-20px);
-        transition: opacity 0.3s ease, transform 0.3s ease, visibility 0.3s ease;
-        margin-top: 60px;
-        background-color: #7B22B3;
-        z-index: 999;
-    }
+  .menuHorizontal {
+    position: absolute;
+    background-color: #7b22b3;
+    height: auto;
+    top: 0;
+    left: 0;
+    right: 0;
+    visibility: hidden;
+    opacity: 0;
+    transform: translateY(-20px);
+    transition: opacity 0.3s ease, transform 0.3s ease, visibility 0.3s ease;
+    margin-top: 60px;
+    z-index: 999;
+  }
 
-    #menucheckbox:checked ~ .menuHorizontal {
-        visibility: visible;
-        opacity: 1;
-        transform: translateY(0);
-    }
+  .seccionesHeader label {
+    display: initial;
+    display: flex;
+    align-items: center;
+  }
 
-    .menuVertical {
-        width: 100%;
-        position: sticky;
-    }
+  #menucheckbox:checked ~ .menuHorizontal {
+    visibility: visible;
+    opacity: 1;
+    transform: translateY(0);
+  }
 
-    .menuHorizontal li {
-        width: 100%;
-        display: block;
-        justify-content: center;
-        align-items: center;
-        padding: 0;
-    }
+  .seccionesHeader ul {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 
-    .seccionesHeader label {
-        display: flex;
-        align-items: center;
-    }
+  .menuVertical {
+    width: 100%;
+    position: sticky;
+  }
 
+  .menuHorizontal li {
+    width: 100%;
+    display: block;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+    transition: background-color 1s;
+  }
 }
 
 @media screen and (max-width: 400px) {
-    .logoHeader a img {
-        width: 140px;
-    }
+  .logoHeader a img {
+    width: 140px;
+  }
 
-    .menuHorizontal {
-        margin-top: 50px;
-        font-size: 10px;
-    }
+  .menuHorizontal {
+    margin-top: 50px;
+    font-size: 10;
+    transform: translateY(-300px);
+    transition: opacity 0.3s ease, transform 0.3s ease, visibility 0.3s ease;
+  }
 }
