feat(footer): terminar el diseño del footer

--- a/app/(client)/components/Footer.css
+++ b/app/(client)/components/Footer.css
@@ -1,4 +1,116 @@
-.listaFooter h3{
+/* .listaFooter h3{
     padding-bottom: 20px;
     color: white;
+} */
+
+.mainFooter {
+  background-color: #333333;
+}
+
+.footerContenido {
+  padding: 70px 70px 0;
+  color: white;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.listaFooter h3 {
+  padding-bottom: 20px;
+  color: white;
+}
+
+.listaFooter ul {
+  list-style: none;
+}
+
+.listaFooter a,
+.listaFooter li {
+  text-decoration: none;
+  color: rgb(168, 168, 168);
+  display: flex;
+  margin-bottom: 20px;
+  font-size: 13px;
+  transition: 0.5s;
+  gap: 5px;
+}
+
+.listaFooter a:hover,
+.listaFooter li:hover {
+  color: white;
+}
+
+.redesFooter ul {
+  display: flex;
+  gap: 20px;
+}
+
+.redesFooter ul > li {
+  transition: 0.5s;
+}
+
+.redesFooter ul > li:hover {
+  transform: scale(1.1);
+}
+
+.barraFooter {
+  display: flex;
+  justify-content: center;
+}
+
+.barraFooter hr {
+  border: 1px solid white;
+  width: 98%;
+  border-radius: 5px;
+}
+
+.rucFooter {
+  background-color: #333333;
+  padding: 10px 30px;
+  color: white;
+  display: flex;
+  justify-content: space-between;
+}
+
+/*--- Responsive ---*/
+
+@media screen and (max-width: 910px) {
+  .footerContenido {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .footerContenido ul li {
+    align-items: center;
+    overflow: hidden;
+  }
+
+  .imgFooter img {
+    width: 150px;
+  }
+
+  .listaFooter {
+    width: 300px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .footerContenido {
+    padding: 10px 5px;
+  }
+
+  .listaFooter {
+    width: 200px;
+  }
+
+  .rucFooter {
+    font-size: 9;
+    gap: 5px;
+    padding: 10px 10px;
+    justify-content: space-between;
+  }
+
+  .derechosFooter {
+    text-align: right;
+  }
 }
