--- a/app/(client)/components/Header.css
+++ b/app/(client)/components/Header.css
@@ -1,4 +1,4 @@
-header {
+.header {
   display: flex;
   justify-content: center;
   text-align: center;
@@ -6,7 +6,7 @@ header {
   box-shadow: 0px 2px 20px #333333;
 }
 
-.logoHeader img {
+.logoHeaderimg {
   padding: 10px 0;
 }
 
