--- a/app/(client)/components/Home_Components/services.css
+++ b/app/(client)/components/Home_Components/services.css
@@ -19,10 +19,11 @@
 
 .services {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     width: 100%;
     align-items: flex-end;
     max-width: 1000px;
+    flex-wrap: wrap;
 }
 
 .service {
@@ -36,6 +37,7 @@
     width: 100%;
     height: 200px;
     transition: 1s;
+    max-width: 250px;
 }
 
 .service:hover{
