--- a/app/(client)/servicios/components/modal.css
+++ b/app/(client)/servicios/components/modal.css
@@ -1,31 +1,66 @@
-/* Animación de entrada */
-.fade-in {
-    animation: fadeInModal 0.5s ease-out forwards;
-  }
-  
-  .fade-out {
-    animation: fadeOutModal 0.5s ease-in forwards;
-  }
+/* Fondo de la modal (seccionA) aparece sin escala */
+.seccionA {
+  opacity: 0;
+  animation: fadeInBackground 0.5s ease-out forwards;
+}
 
-  @keyframes fadeInModal {
-    from {
+/* Animación solo de opacidad para el fondo */
+@keyframes fadeInBackground {
+  from {
+      opacity: 0;
+  }
+  to {
+      opacity: 1;
+  }
+}
+
+/* Animación de entrada para el modal */
+.modal-content {
+  opacity: 0;
+  transform: scale(0.8);
+  animation: fadeInModal 0.5s ease-out forwards;
+}
+
+/* Animación de salida para el modal */
+@keyframes fadeInModal {
+  from {
       opacity: 0;
       transform: scale(0.8);
-    }
-    to {
-      opacity: 1;
-      transform: scale(1);
-    }
   }
-  
-  @keyframes fadeOutModal {
-    from {
+  to {
       opacity: 1;
       transform: scale(1);
-    }
-    to {
+  }
+}
+
+/* Animación de salida para el fondo */
+@keyframes fadeOutBackground {
+  from {
+      opacity: 1;
+  }
+  to {
+      opacity: 0;
+  }
+}
+
+/* Animación de salida para el modal */
+@keyframes fadeOutModal {
+  from {
+      opacity: 1;
+      transform: scale(1);
+  }
+  to {
       opacity: 0;
       transform: scale(0.8);
-    }
   }
-  
+}
+
+/* Para ocultar el fondo con opacidad */
+.fade-out-bg {
+  animation: fadeOutBackground 0.5s ease-in forwards;
+}
+
+/* Para ocultar el modal con la escala */
+.fade-out-modal {
+  animation: fadeOutModal 0.5s ease-in forwards;
+}
