--- a/app/(client)/components/Header.css
+++ b/app/(client)/components/Header.css
@@ -33,6 +33,8 @@
   align-items: center;
   display: flex;
   align-items: center;
+  box-sizing: border-box; 
+
 }
 
 .menuHorizontal a,
@@ -71,6 +73,18 @@
 .menuHorizontal li:hover .menuVertical {
   display: block;
 }
+.menuVertical li.active-sub > a {
+    background-color: rgba(255, 255, 255, 0.2);
+  }
+@media screen and (min-width: 700px) {
+  .menuHorizontal li.active > a,
+  .menuHorizontal li.active > p {
+    border-bottom: 4px solid white;
+    padding-bottom: 17px; 
+    padding-top: 22px;
+  }
+  
+}
 
 /* RESPONSIVE */
 
@@ -87,9 +101,14 @@
   cursor: pointer;
 }
 
+
 /*--- RESPONSIVE ---*/
 
 @media screen and (max-width: 700px) {
+  .menuHorizontal li.active > a,
+  .menuHorizontal li.active > p {
+    background-color: rgba(255, 255, 255, 0.2);
+  }
   .menuHorizontal {
     position: absolute;
     background-color: #7b22b3;
