--- a/app/(client)/components/Home_Components/services.css
+++ b/app/(client)/components/Home_Components/services.css
@@ -1,10 +1,8 @@
-
-
-.services-main{
+.services-main {
     padding: 50px;
 }
 
-.services-text h2{
+.services-text h2 {
     color: #90388B;
     font-size: 2rem;
     margin: 0;
@@ -36,44 +34,48 @@
     background-color: #f9f9f9;
     width: 100%;
     height: 200px;
-    transition: 1s;
     max-width: 250px;
+    transition: transform 0.5s cubic-bezier(0.25, 1, 0.5, 1), 
+                background-color 0.5s ease;
+    cursor: pointer; 
+    z-index: 1; 
 }
 
-.service:hover{
+.service:hover {
     transform: scale(1.1);
-    background-color: #e3e3e3;
-    img{
-        width: 70px;
-        height: 70px;
-    }
+    z-index: 10;
+}
 
-    h3{
-        font-size: 1rem;
-    }
-
-    p{
-        display: flex;
-        opacity: 0.9;
-    }
+.service img {
+    width: 100px;
+    height: 100px;
+    transition: width 0.5s ease, height 0.5s ease;
 }
 
 .service h3 {
     margin-top: 10px;
     font-size: 1.2rem;
     color: #333;
-    transition: 1s;
+    transition: font-size 0.5s ease;
 }
 
-.service p{
+.service p {
     display: none;
     font-size: 0.8rem;
-    transition: 5s ease, opacity 1s ;
-
+    opacity: 0;
+    transition: opacity 0.5s ease;
 }
 
-.service img {
-    width: 100px;
-    height: 100px;
-    transition: 1s;
+.service:hover img {
+    width: 70px;
+    height: 70px;
+}
+
+.service:hover h3 {
+    font-size: 1rem;
+}
+
+.service:hover p {
+    display: flex;
+    opacity: 0.9;
 }
